fix: catalog on mobile

--- a/wp-content/themes/techcomfort/assets/scss/_catalog.scss
+++ b/wp-content/themes/techcomfort/assets/scss/_catalog.scss
@@ -545,8 +545,9 @@
               margin-bottom: 0;
             }
             .item-description {
-              width:      56%;
+              width:      59%;
               align-self: center;
+              padding: 5px;
               > a {
                 max-width:     initial;
                 margin-bottom: 5px;
